--- a/typescript-dojo/index.html
+++ b/typescript-dojo/index.html
@@ -7,7 +7,12 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- <div id="app"></div> -->
+    <!-- <script type="module" src="/src/main.ts"></script> -->
+
+    <script>
+        console.log("hello world");
+    </script>
+    
   </body>
 </html>
